--- a/web/elektron/views/monitor.html
+++ b/web/elektron/views/monitor.html
@@ -37,12 +37,12 @@
             <panel panel-class="panel-default no-padding" heading="{{ component.label }}">
                 <panel-controls>
                     <panel-control-collapse></panel-control-collapse>
-                    <i ng-show="line[component.device_mac].status == true" class="glyphicon text-success glyphicon-ok"></i></button>
-                    <i ng-show="line[component.device_mac].status == false" class="glyphicon text-danger glyphicon-remove"></i></button>
+                    <i ng-show="components_charts[component.device_mac].status == true" class="glyphicon text-success glyphicon-ok"></i></button>
+                    <i ng-show="components_charts[component.device_mac].status == false" class="glyphicon text-danger glyphicon-remove"></i></button>
                 </panel-controls>
                 <div class="p20">
                     <div class="row">
-                      <canvas id="component.device_mac" class="chart chart-line" chart-data="line[component.device_mac].data" chart-labels="line[component.device_mac].labels"
+                      <canvas id="{{component.device_mac}}" class="chart chart-line" chart-data="line[component.device_mac].data" chart-labels="line[component.device_mac].labels"
                         chart-series="line[component.device_mac].series" >
                       </canvas>
                     </div>
