--- a/web/elektron/views/components.html
+++ b/web/elektron/views/components.html
@@ -1,6 +1,6 @@
 <div id="page-heading">
 	<ol class="breadcrumb">
-		<li><a href="#/">Dashboard</a></li>
+		<li><a href="#/">Inicio</a></li>
 		<li class="active">Components</li>
 	</ol>
 
