--- a/web/elektron/views/monitor.html
+++ b/web/elektron/views/monitor.html
@@ -1,7 +1,7 @@
 <div ng-controller="MonitorController">
   <div id="page-heading">
       <ol class="breadcrumb">
-          <li><a href="#/">Home</a></li>
+          <li><a href="#/">Inicio</a></li>
           <li class="active">Monitor</li>
       </ol>
       <h1>Monitor de componentes</h1>
@@ -33,7 +33,7 @@
             <span class="glyphicon glyphicon-refresh"></span>
           </button>
         </div>
-        <div ng-repeat="component in components_server" ng-show="{{ component.devicestate.name == 'on' && component.enabled==true}}" class="col-md-6">
+        <div ng-repeat="component in components_server_enabled" class="col-md-6">
             <panel panel-class="panel-default no-padding" heading="{{ component.label }}">
                 <panel-controls>
                     <panel-control-collapse></panel-control-collapse>
