--- a/ionic-mobile/elektron/www/templates/menu.html
+++ b/ionic-mobile/elektron/www/templates/menu.html
@@ -9,7 +9,8 @@
       </ion-nav-buttons>
     </ion-nav-bar>
 
-    <ion-nav-view name="menuContent"></ion-nav-view>
+    <ion-nav-view name="menuContent">
+    </ion-nav-view>
 
   </ion-side-menu-content>
 
