--- a/web/elektron/views/history.html
+++ b/web/elektron/views/history.html
@@ -108,7 +108,7 @@
                       <div class="text-center">Total de consumo período</div>
                   </div>
                   <div class="boxes-body">
-                      <div class="text-center">{{total_data/1000 || 0 }}wts</div>
+                      <div class="text-center">{{total_watts/1000 || 0 | number:1}} Kw</div>
                   </div>
                 </a>
               </div>
