WEB: dash con error de componentes

--- a/web/elektron/views/index.html
+++ b/web/elektron/views/index.html
@@ -41,7 +41,7 @@
                         <div class="loader-spinner"></div>
                       </div>
                       <div ng-show="dashboarderror == true" class="error-container">
-                        <span>Error de conexion en el servidor </span>
+                        <span>{{dashboarderrormsje}} </span>
                         <button ng-click="reloadpage()" class="error-button btn btn-sm btn-default">
                           <span class="glyphicon glyphicon-refresh"></span>
                         </button>
