--- a/web/elektron/views/monitor.html
+++ b/web/elektron/views/monitor.html
@@ -28,7 +28,7 @@
           <div class="loader-spinner"></div>
         </div>
         <div ng-show="monitorserror == true" class="error-container">
-          <span>Error de conexion en el servidor </span>
+          <span>{{monitorerrormsje}} </span>
           <button ng-click="reloadpage()" class="error-button btn btn-sm btn-default">
             <span class="glyphicon glyphicon-refresh"></span>
           </button>
