--- a/web/elektron/views/statistics.html
+++ b/web/elektron/views/statistics.html
@@ -57,7 +57,7 @@
             <td>
 						<!-- editable status (select-local) -->
 						<span e-form="rowform" e-required>
-						  {{component.data_sum/1000 | number:0 }} kw ({{ component.device_percent || 0 | number:1 }}%)
+						  {{component.device_data_sum/1000 | number:0 }} kw ({{ component.device_percent || 0 | number:1 }}%)
 						</span>
 					  </td>
 
