arreglos varios WEB: mensajes error, monitor, history, etc

--- a/web/elektron/assets/css/styles.css
+++ b/web/elektron/assets/css/styles.css
@@ -1,3 +1,9 @@
+.boxes-history-component {
+  padding-top: 11% !important;
+  padding-bottom: 11% !important;
+  font-size: 0.9em !important;
+}
+
 .boxes-a {
   color: #ffffff !important;
   margin: 0px 0px 20px;
