--- a/web/elektron/views/history.html
+++ b/web/elektron/views/history.html
@@ -64,7 +64,7 @@
                         <div class="text-center">Componente seleccionado</div>
                     </div>
                     <div class="boxes-body">
-                        <div class="text-center">{{selectedComponent.label || 'Todos'}}</div>
+                        <div class="boxes-history-component text-center">{{selectedComponent.label || 'Todos'}}</div>
                     </div>
                   </a>
               </div>
