WEB: tareas con mensaje de error si no hay y si se borran o agregan en el momento se añaden al html

--- a/web/elektron/assets/css/styles.css
+++ b/web/elektron/assets/css/styles.css
@@ -132,6 +132,13 @@
   margin-top: 20%;
 }
 
+.no-task-container {
+  text-align: center;
+  min-height: 100px;
+  margin-top: 7%;
+}
+
+
 .task-error-container {
   min-height: 160px;
   text-align: center;
